instruments/AIOUSB/Headers/AIOUSB.vb

'This module demonstrates the declarations required for using the AIOUSB driver with Visual Studio 2005.
'This won't work with previous versions of Visual Basic

Imports System
Imports System.Runtime.InteropServices 'For the structLayout thing

Module AIOUSB




    Public Const diOnly As UInteger = &HFFFFFFFD&
    Public Const diFirst As UInteger = &HFFFFFFFE&
    Public Const diNone As UInteger = &HFFFFFFFF&

    'This structure is for DACOutputFrame

    <StructLayout(LayoutKind.Sequential, pack:=1)> _
    Public Structure DACDataPoint
        Public X As UShort
        Public Y As UShort
        Public R As UShort
        Public G As UShort
        Public B As UShort
    End Structure

    'This structure is for DACMultiDirect

    <StructLayout(LayoutKind.Sequential, Pack:=1)> _
    Public Structure DACChange
        Public Channel As UShort
        Public Counts As UShort
    End Structure



	Public Declare Function GetDevices Lib "AIOUSB" Alias "VBGetDevices" () As UInteger
	Public Declare Function QueryDeviceInfo Lib "AIOUSB" Alias "VBQueryDeviceInfo" (ByVal DeviceIndex As UInteger, ByRef pPID As UInteger, ByRef pNameSize As UInteger, ByVal pName As String, ByRef pDIOBytes As UInteger, ByRef pCounters As UInteger) As UInteger
	Public Declare Function AIOUSB_CloseDevice Lib "AIOUSB" Alias "VBAIOUSB_CloseDevice" (ByVal DeviceIndex As UInteger) As UInteger
	Public Declare Function ClearDevices Lib "AIOUSB" Alias "VBClearDevices" () As UInteger
	Public Declare Function GetDeviceUniqueStr Lib "AIOUSB" Alias "VBGetDeviceUniqueStr" (ByVal DeviceIndex As UInteger, ByRef pUIDSize As UInteger, ByVal pUID As String) As UInteger
	Public Declare Function GetDeviceSerialNumber Lib "AIOUSB" Alias "VBGetDeviceSerialNumber" (ByVal DeviceIndex As UInteger, ByRef pSerialNumber As ULong) As UInteger
	Public Declare Function ResolveDeviceIndex Lib "AIOUSB" Alias "VBResolveDeviceIndex" (ByVal DeviceIndex As UInteger) As UInteger
	Public Declare Function GetDeviceByEEPROMByte Lib "AIOUSB" Alias "VBGetDeviceByEEPROMByte" (ByVal Data As Byte) As UInteger
	Public Declare Function GetDeviceByEEPROMData Lib "AIOUSB" Alias "VBGetDeviceByEEPROMData" (ByVal StartAddress As UInteger, ByVal DataSize As UInteger, ByRef pData As Byte) As UInteger
	Public Declare Function GetDeviceBySerialNumber Lib "AIOUSB" Alias "VBGetDeviceBySerialNumber" (ByRef pSerialNumber As ULong) As UInteger

	Public Declare Function AIOUSB_ClearFIFO Lib "AIOUSB" Alias "VBAIOUSB_ClearFIFO" (ByVal DeviceIndex As UInteger, ByVal TimeMethod As UInteger) As UInteger
	Public Declare Function AIOUSB_SetStreamingBlockSize Lib "AIOUSB" Alias "VBAIOUSB_SetStreamingBlockSize" (ByVal DeviceIndex As UInteger, ByVal BlockSize As UInteger) As UInteger
	Public Declare Function AIOUSB_ResetChip Lib "AIOUSB" Alias "VBAIOUSB_ResetChip" (ByVal DeviceIndex As UInteger) As UInteger
	Public Declare Function AIOUSB_ReloadDeviceLinks Lib "AIOUSB" Alias "VBAIOUSB_ReloadDeviceLinks" () As UInteger
	Public Declare Function AIOUSB_UploadD15LoFirmwaresByPID Lib "AIOUSB" Alias "VBAIOUSB_UploadD15LoFirmwaresByPID" (ByVal pFirmScript As String) As UInteger
	Public Declare Function AIOUSB_SetGlobalTickRate Lib "AIOUSB" Alias "VBAIOUSB_SetGlobalTickRate" (ByVal DeviceIndex As UInteger, ByRef pHz As Double) As UInteger

	Public Declare Function AIOUSB_QuerySimplePNPData Lib "AIOUSB" Alias "VBAIOUSB_QuerySimplePNPData" (ByVal DeviceIndex As UInteger, ByRef pPNPData As Byte, ByRef pPNPDataBytes As UInteger) As UInteger

	Public Declare Function CustomEEPROMRead Lib "AIOUSB" Alias "VBCustomEEPROMRead" (ByVal DeviceIndex As UInteger, ByVal StartAddress As UInteger, ByRef DataSize As UInteger, ByRef pData As Byte) As UInteger
	Public Declare Function CustomEEPROMWrite Lib "AIOUSB" Alias "VBCustomEEPROMWrite" (ByVal DeviceIndex As UInteger, ByVal StartAddress As UInteger, ByVal DataSize As UInteger, ByRef pData As Byte) As UInteger
	Public Declare Function AIOUSB_FlashRead Lib "AIOUSB" Alias "VBAIOUSB_FlashRead" (ByVal DeviceIndex As UInteger, ByVal StartAddress As UInteger, ByRef DataSize As UInteger, ByRef Data As Byte) As UInteger
	Public Declare Function AIOUSB_FlashWrite Lib "AIOUSB" Alias "VBAIOUSB_FlashWrite" (ByVal DeviceIndex As UInteger, ByVal StartAddress As UInteger, ByVal DataSize As UInteger, ByRef Data As Byte) As UInteger
	Public Declare Function AIOUSB_FlashEraseSector Lib "AIOUSB" Alias "VBAIOUSB_FlashEraseSector" (ByVal DeviceIndex As UInteger, ByVal Sector As UInteger) As UInteger

	Public Declare Function GenericVendorRead Lib "AIOUSB" Alias "VBGenericVendorRead" (ByVal DeviceIndex As UInteger, ByVal Request As Byte, ByVal Value As UShort, ByVal Index As UShort, ByRef pDataSize As UInteger, ByRef pData As Byte) As UInteger
	Public Declare Function GenericVendorWrite Lib "AIOUSB" Alias "VBGenericVendorWrite" (ByVal DeviceIndex As UInteger, ByVal Request As Byte, ByVal Value As UShort, ByVal Index As UShort, ByVal DataSize As UInteger, ByRef pData As Byte) As UInteger
	Public Declare Function AWU_GenericBulkIn Lib "AIOUSB" Alias "VBAWU_GenericBulkIn" (ByVal DeviceIndex As UInteger, ByVal PipeID As UInteger, ByRef pData As Byte, ByVal DataSize As UInteger, ByVal BytesRead As UInteger) As UInteger
	Public Declare Function AWU_GenericBulkOut Lib "AIOUSB" Alias "VBAWU_GenericBulkOut" (ByVal DeviceIndex As UInteger, ByVal PipeID As UInteger, ByRef pData As Byte, ByVal DataSize As UInteger, ByVal BytesWritten As UInteger) As UInteger



	Public Declare Function ADC_GetImmediate Lib "AIOUSB" Alias "VBADC_GetImmediate" (ByVal DeviceIndex As UInteger, ByVal Channel As UInteger, ByRef pBuf As UShort) As UInteger
	Public Declare Function ADC_GetScan Lib "AIOUSB" Alias "VBADC_GetScan" (ByVal DeviceIndex As UInteger, ByRef pBuf As UShort) As UInteger
	Public Declare Function ADC_GetScanV Lib "AIOUSB" Alias "VBADC_GetScanV" (ByVal DeviceIndex As UInteger, ByRef pBuf As Double) As UInteger
	Public Declare Function ADC_GetChannelV Lib "AIOUSB" Alias "VBADC_GetChannelV" (ByVal DeviceIndex As UInteger, ByVal ChannelIndex As UInteger, ByRef pBuf As Double) As UInteger
	Public Declare Function ADC_GetCalRefV Lib "AIOUSB" Alias "VBADC_GetCalRefV" (ByVal DeviceIndex As UInteger, ByVal CalRefIndex As UInteger, ByRef pRef As Double) As UInteger

	Public Declare Function ADC_GetTrigScan Lib "AIOUSB" Alias "VBADC_GetTrigScan" (ByVal DeviceIndex As UInteger, ByRef pBuf As UShort, ByVal TimeoutMS As Integer) As UInteger
	Public Declare Function ADC_GetTrigScanV Lib "AIOUSB" Alias "VBADC_GetTrigScanV" (ByVal DeviceIndex As UInteger, ByRef pBuf As Double, ByVal TimeoutMS As Integer) As UInteger

	Public Declare Function ADC_GetConfig Lib "AIOUSB" Alias "VBADC_GetConfig" (ByVal DeviceIndex As UInteger, ByRef pConfigBuf As Byte, ByRef ConfigBufSize As UInteger) As UInteger
	Public Declare Function ADC_SetConfig Lib "AIOUSB" Alias "VBADC_SetConfig" (ByVal DeviceIndex As UInteger, ByRef pConfigBuf As Byte, ByRef ConfigBufSize As UInteger) As UInteger
	Public Declare Function ADC_ADMode Lib "AIOUSB" Alias "VBADC_ADMode" (ByVal DeviceIndex As UInteger, ByVal TriggerMode As Byte, ByVal CalMode As Byte) As UInteger
	Public Declare Function ADC_Range1 Lib "AIOUSB" Alias "VBADC_Range1" (ByVal DeviceIndex As UInteger, ByVal ADChannel As UInteger, ByVal GainCode As Byte, ByVal bDifferential As UInteger) As UInteger
	Public Declare Function ADC_RangeAll Lib "AIOUSB" Alias "VBADC_RangeAll" (ByVal DeviceIndex As UInteger, ByRef pGainCodes As Byte, ByVal bDifferential As UInteger) As UInteger
	Public Declare Function ADC_SetScanLimits Lib "AIOUSB" Alias "VBADC_SetScanLimits" (ByVal DeviceIndex As UInteger, ByVal StartChannel As UInteger, ByVal EndChannel As UInteger) As UInteger
	Public Declare Function ADC_SetOversample Lib "AIOUSB" Alias "VBADC_SetOversample" (ByVal DeviceIndex As UInteger, ByVal Oversample As Byte) As UInteger
	Public Declare Function ADC_QueryCal Lib "AIOUSB" Alias "VBADC_QueryCal" (ByVal DeviceIndex As UInteger) As UInteger
	Public Declare Function ADC_SetCal Lib "AIOUSB" Alias "VBADC_SetCal" (ByVal DeviceIndex As UInteger, ByVal CalFileName As String) As UInteger
	Public Declare Function ADC_SetCalAndSave Lib "AIOUSB" Alias "VBADC_SetCalAndSave" (ByVal DeviceIndex As UInteger, ByVal CalFileName As String, ByVal SaveCalFileName As String) As UInteger
	Public Declare Function ADC_Initialize Lib "AIOUSB" Alias "VBADC_Initialize" (ByVal DeviceIndex As UInteger, ByRef pConfigBuf As Byte, ByRef ConfigBufSize As UInteger, ByVal CalFileName As String) As UInteger

	Public Declare Function ADC_BulkAcquire Lib "AIOUSB" Alias "VBADC_BulkAcquire" (ByVal DeviceIndex As UInteger, ByVal BufSize As UInteger, ByRef pBuf As Byte) As UInteger
	Public Declare Function ADC_BulkPoll Lib "AIOUSB" Alias "VBADC_BulkPoll" (ByVal DeviceIndex As UInteger, ByRef BytesLeft As UInteger) As UInteger
	Public Declare Function ADC_BulkAbort Lib "AIOUSB" Alias "VBADC_BulkAbort" (ByVal DeviceIndex As UInteger) As UInteger

	Public Declare Function ADC_BulkContinuousRingStart Lib "AIOUSB" Alias "VBADC_BulkContinuousRingStart" (ByVal DeviceIndex As UInteger, ByVal RingBufferSize As UInteger, ByVal PacketsPerBlock As UInteger) As UInteger
	Public Declare Function ADC_BulkContinuousEnd Lib "AIOUSB" Alias "VBADC_BulkContinuousEnd" (ByVal DeviceIndex As UInteger, ByRef pIOStatus As UInteger) As UInteger

	Public Declare Function ADC_FullStartRing Lib "AIOUSB" Alias "VBADC_FullStartRing" (ByVal DeviceIndex As UInteger, ByRef pConfigBuf As Byte, ByRef ConfigBufSize As UInteger, ByVal CalFileName As String, ByRef pCounterHz As Double, ByVal RingBufferSize As UInteger, ByVal PacketsPerBlock As UInteger) As UInteger
	Public Declare Function ADC_ReadData Lib "AIOUSB" Alias "VBADC_ReadData" (ByVal DeviceIndex As UInteger, ByRef pConfigBuf As Byte, ByRef ScansToRead As UInteger, ByRef pData As Double, ByVal Timeout As Double) As UInteger

	Public Declare Function ADC_InitFastITScanV Lib "AIOUSB" Alias "VBADC_InitFastITScanV" (ByVal DeviceIndex As UInteger) As UInteger
	Public Declare Function ADC_ResetFastITScanV Lib "AIOUSB" Alias "VBADC_ResetFastITScanV" (ByVal DeviceIndex As UInteger) As UInteger
	Public Declare Function ADC_SetFastITScanVChannels Lib "AIOUSB" Alias "VBADC_SetFastITScanVChannels" (ByVal DeviceIndex As UInteger, NewChannels As UInteger) As UInteger
	Public Declare Function ADC_GetFastITScanV Lib "AIOUSB" Alias "VBADC_GetFastITScanV" (ByVal DeviceIndex As UInteger, ByRef pBuf As Double) As UInteger
	Public Declare Function ADC_GetITScanV Lib "AIOUSB" Alias "VBADC_GetITScanV" (ByVal DeviceIndex As UInteger, ByRef pBuf As Double) As UInteger

	Public Declare Function ADC_InitFastScanV Lib "AIOUSB" Alias "VBADC_InitFastScanV" (ByVal DeviceIndex As UInteger) As UInteger
	Public Declare Function ADC_ResetFastScanV Lib "AIOUSB" Alias "VBADC_ResetFastScanV" (ByVal DeviceIndex As UInteger) As UInteger
	Public Declare Function ADC_GetFastScanV Lib "AIOUSB" Alias "VBADC_GetFastScanV" (ByVal DeviceIndex As UInteger, ByRef pBuf As Double) As UInteger


